# academic-portfolio

./: .gitignore  CLEANUP_BASELINE.md  CLEANUP_ROADMAP.md  Makefile  README.md  SCHEMA.md  pyproject.toml
.github/workflows/: deploy-site.yml
assets/cv/: common.css  rich.css  sober.css
assets/site/: career-details.js  career-timeline.js  collaborations.js  dissemination.js  organizations.js  projects.js  publications.js  site.css  software-timeline.js  teaching-timeline.js  ui.js
cv_models/: academic_full.toml  academic_rich.toml  academic_sober.toml
data/: profile.yaml
data/activities/dissemination/: presentations.yaml  press.yaml  (+3 more)
data/career/: certifications.yaml  degrees.yaml  experience.yaml  grants.yaml  honors.yaml  research_stays.yaml
data/entities/: organizations.yaml
data/research/: publications.yaml  research_projects.yaml  reviewing.yaml  software_packages.yaml  software_projects.yaml
examples/applications/: application_overlay.example.toml
locales/: en.yaml  es.yaml
scripts/: add_publication_from_doi.py  validate_data.rb
src/academic_portfolio/: __init__.py  cli.py  cv.py  github.py  i18n.py  loader.py  packages.py  render.py  resolver.py  site.py  view_records.py
templates/cv/: academic_full.md.j2  rich.html.j2  sober.html.j2
templates/site/: index.html.j2
tests/: test_cli.py  test_cv.py  test_i18n.py  test_i18n_baseline.py  test_i18n_regression.py  test_loader.py  test_no_data_specific_exceptions.py  test_organization_network.py  test_packages.py  test_resolver.py  test_site.py  test_validate_data.py  test_view_records.py
(+40 files in other folders)
