[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "academic-portfolio"
version = "0.1.0"
description = "Tools for generating CVs and portfolio outputs from structured YAML data."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "jinja2>=3.1",
  "playwright>=1.44",
  "pydantic>=2.7",
  "pyyaml>=6.0",
  "rich>=13.7",
  "typer>=0.12",
]

[project.scripts]
portfolio = "academic_portfolio.cli:app"

[dependency-groups]
dev = [
  "pytest>=8.0",
  "ruff>=0.6",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.6",
]

[tool.hatch.build.targets.wheel]
packages = ["src/academic_portfolio"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
